2007-06-06  Sven Herzberg  <herzi@gnome-de.org>

	Patch by Vincent Untz (Fixes 354232):

	* src/ui/main.c: set the default window icon early
	* src/ui/ui-main.c: don't set the window icon so late

2007-02-19  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>

	* help/da/da.po: Added Danish translation by Peter Bach.
	* help/Makefile.am: Added "sv" to DOC_LINGUAS.

2007-02-04  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added "da" (Danish) to ALL_LINGUAS.

2007-01-27  Kostas Papadimas  <pkst@gnome.org>

	* configure.in: Added 'el' to ALL_LINGUAS.

2007-01-23  David Lodge <dave@cirt.net>

	* help/en_GB/en_GB.po: Added English (British) translation
	* help/Makefile.am: Added en_GB to DOC_LINGUAS

2006-12-15  Pema geyleg  <pgeyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS

2006-11-16  Daniel Nylander <po@danielnylander.se>

	* help/sv/sv.po: Added Swedish translation.
	* help/Makefile.am: Added sv to DOC_LINGUAS.

2006-08-04  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.in: Added "ca" (Catalaon) to ALL_LINGUAS.

2006-08-04  Sven Herzberg  <herzi@gnome-de.org>

	* AUTHORS: updated for Laurent's email address and to mention Michael

2006-08-02  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in,
	* data/Makefile.am,
	* data/monkey-bubble.glade,
	* src/ui/game-1-player-manager.c,
	* src/ui/main.c,
	* src/ui/ui-main.c: added highscores for single player games (only
	interesting for distributors)

# Version 0.4.0

2006-08-01  Sven Herzberg  <herzi@gnome-de.org>

	* .cvsignore,
	* po/.cvsignore: updated
	* Makefile.am,
	* data/Makefile.am: distcheck fixes
	* autogen.sh: updated, uses newer automake
	* configure.in: updated for 0.4.0; added gnome-doc-utils; fix libtool; 
	* NEWS: updated
	* help/C/Makefile.am,
	* help/Makefile.am,
	* help/fr/Makefile.am,
	* help/fr/fr.po,
	* help/fr/monkey-bubble.xml,
	* help/monkey-bubble.omf.in,
	* help/omf.make,
	* help/xmldocs.make: migrated the documentation system to use
	gnome-doc-utils