@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Monkey Bubble
 _Comment=Monkey Bubble Arcade Game
 Exec=monkey-bubble
-Icon=monkey-bubble-icon.png
+Icon=monkey-bubble.png
 Terminal=false
 Type=Application
 Categories=GNOME;Application;Game;
