@@ -15,8 +15,21 @@ gfx_DATA = \
 	monkey.png splash.svg star.svg \
 	hurry_up.svg
 
-sharedgfxdir=$(datadir)/pixmaps
-sharedgfx_DATA = monkey-bubble-icon.png
+icondir=$(datadir)/icons/hicolor/32x32/apps
+icon_DATA=monkey-bubble.png
 
+gtk_update_icon_cache=gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
-EXTRA_DIST = $(gfx_DATA) $(sharedgfx_DATA)
+install-data-hook: update-icon-cache
+uninstall-hook: update-icon-cache
+update-icon-cache:
+	@-if test -z "$(DESTDIR)"; then \
+		echo "Updating Gtk icon cache."; \
+		$(gtk_update_icon_cache); \
+	else \
+		echo "*** Icon cache not updated.  After (un)install, run this:"; \
+		echo "***   $(gtk_update_icon_cache)"; \
+	fi
+
+EXTRA_DIST = $(gfx_DATA) $(icon_DATA)
+
